Added Spock into build gradle files